@@ -1,19 +1,17 @@
 package com.loopers.domain.order;
 
-import com.loopers.domain.order.OrderCreateCommand.OrderItem;
+import static com.loopers.domain.shared.Preconditions.requireNonEmpty;
+import static java.util.stream.Collectors.toList;
+
 import com.loopers.domain.shared.Money;
 import jakarta.persistence.CascadeType;
 import jakarta.persistence.Embeddable;
 import jakarta.persistence.OneToMany;
+import java.util.ArrayList;
+import java.util.List;
 import lombok.AccessLevel;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
-
-import java.util.ArrayList;
-import java.util.List;
-
-import static com.loopers.domain.shared.Preconditions.requireNonEmpty;
-import static java.util.stream.Collectors.toList;
 
 
 @Getter(AccessLevel.PACKAGE)
@@ -30,14 +28,12 @@ class OrderLines {
 
     static OrderLines of(Order order, List<OrderItem> orderItems) {
         requireNonEmpty(orderItems, "주문 항목은 비어있을 수 없습니다.");
-        return new OrderLines(
-                orderItems.stream().map(item -> OrderLine.from(order, item)).collect(toList())
-        );
+        return new OrderLines(orderItems.stream().map(item -> OrderLine.from(order, item)).toList());
     }
 
     Money calculateTotalAmount() {
         return lines.stream()
-                .map(OrderLine::calculateLineTotal)
-                .reduce(Money.ZERO, Money::add);
+            .map(OrderLine::calculateLineTotal)
+            .reduce(Money.ZERO, Money::add);
     }
 }
